@@ -11,7 +11,9 @@ import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.health.HealthIndicatorImpact;
 import org.elasticsearch.health.HealthIndicatorResult;
+import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xpack.core.ilm.IndexLifecycleMetadata;
@@ -19,6 +21,7 @@ import org.elasticsearch.xpack.core.ilm.LifecyclePolicy;
 import org.elasticsearch.xpack.core.ilm.LifecyclePolicyMetadata;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.health.HealthStatus.GREEN;
@@ -46,6 +49,7 @@ public class IlmHealthIndicatorServiceTests extends ESTestCase {
                     DATA,
                     GREEN,
                     "ILM is running",
+                    null,
                     new SimpleHealthIndicatorDetails(Map.of("ilm_status", RUNNING, "policies", 1)),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -67,8 +71,16 @@ public class IlmHealthIndicatorServiceTests extends ESTestCase {
                     DATA,
                     YELLOW,
                     "ILM is not running",
+                    IlmHealthIndicatorService.HELP_URL,
                     new SimpleHealthIndicatorDetails(Map.of("ilm_status", status, "policies", 1)),
-                    Collections.emptyList(),
+                    Collections.singletonList(
+                        new HealthIndicatorImpact(
+                            3,
+                            "Automatic index lifecycle and data retention management is disabled. The performance and stability of your "
+                                + "system could be impacted.",
+                            List.of(ImpactArea.DEPLOYMENT_MANAGEMENT)
+                        )
+                    ),
                     Collections.emptyList()
                 )
             )
@@ -88,6 +100,7 @@ public class IlmHealthIndicatorServiceTests extends ESTestCase {
                     DATA,
                     GREEN,
                     "No policies configured",
+                    null,
                     new SimpleHealthIndicatorDetails(Map.of("ilm_status", status, "policies", 0)),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -108,6 +121,7 @@ public class IlmHealthIndicatorServiceTests extends ESTestCase {
                     DATA,
                     GREEN,
                     "No policies configured",
+                    null,
                     new SimpleHealthIndicatorDetails(Map.of("ilm_status", RUNNING, "policies", 0)),
                     Collections.emptyList(),
                     Collections.emptyList()
